frontend/src/styles/assets.css
.AvatarWrap {
  display: flex;
  flex-direction: row;
  align-items: flex-end;
  justify-content: center;
  width: 100%;
  height: 5rem;
  padding: 1rem 0;
}
.header {
  position: relative;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}
.video {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 100%;
  height: 100%;
  object-fit: cover;
  transform: translate(-50%, -50%);
}

.shadow {
  max-width: 100%;
    height: auto;
    display: table;
    margin: 0 auto;

}

.margin-left {
  margin-left: 20px;
}

.Avatar {
  display: inline-block;
  width: 6.2rem;
  height: 4.7rem;
  border-radius: 8px;
}

